<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">靓仔醉鹅</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="user_prefix">用户：</string>
    <string name="money">金额</string>
    <string name="bt_dialog_cancel">取消</string>
    <string name="bt_dialog_ok">确定</string>
    <string name="ok">确定</string>
    <string name="alert_title">友情提醒</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="phone">电话</string>
    <string name="money_prefix">余额：</string>
    <string name="cancel">取消</string>
    <string name="score">积分值</string>
    <string name="vip_prefix">VIP：</string>
    <string name="back">返回</string>

    <string name="score_prifix">积分：</string>

</resources>