<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290.0dip"
    android:layout_height="wrap_content"
    android:background="@drawable/app_dialog_corners_bg"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="72.0dip"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:layout_gravity="center_vertical"
            android:layout_margin="16.0dip"
            android:contentDescription=""
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="Details"
            android:textColor="@color/text_normal_color"
            android:textSize="18.0sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginBottom="12.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:background="@color/text_divider_color" />

    <EditText
        android:id="@+id/money"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="4.0dip"
        android:layout_weight="0.29"
        android:gravity="center_vertical"
        android:hint="@string/money"
        android:inputType="numberDecimal"
        android:textColor="@color/text_light_color"
        android:textSize="16.0sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="4.0dip"
        android:layout_weight="0.29"
        android:gravity="center_vertical"
        android:hint="@string/phone"
        android:inputType="phone|number"
        android:textColor="@color/text_light_color"
        android:textSize="16.0sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="4.0dip"
        android:layout_weight="0.29"
        android:gravity="center_vertical"
        android:hint="@string/score"
        android:inputType="number"
        android:textColor="@color/text_light_color"
        android:textSize="16.0sp"
        android:visibility="gone" />



    <!--<TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="4.0dip"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8.0dip"
        android:text=""
        android:textColor="@color/text_warning_color"
        android:textSize="16.0sp" />-->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16.0dip"
        android:layout_marginTop="12.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0.0dip"
            android:layout_height="36.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="4.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/cancel_btn"
            android:gravity="center"
            android:text="@string/bt_dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_light_color"
            android:textSize="@dimen/dialog_button_text_size" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0.0dip"
            android:layout_height="36.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/bt_dialog_ok"
            android:enabled="false"
            android:textAllCaps="false"
            android:textColor="@color/text_normal_bright_color"
            android:textSize="@dimen/dialog_button_text_size" />
    </LinearLayout>
</LinearLayout>